# husky-ws

./: .gitignore  README.md  robot.yaml
clearpath_common/: CMakeLists.txt  husky_hardware.xml  package.xml
clearpath_common/config/: diagnostics.yaml
clearpath_common/include/clearpath_common/: horizon_legacy_wrapper.h  husky_diagnostics.h  husky_hardware.hpp
clearpath_common/include/clearpath_common/horizon_legacy/: Message.h  Message_cmd.h  Message_data.h  Message_request.h  Transport.h  clearpath.h
clearpath_common/launch/: platform.launch.py
clearpath_common/src/: horizon_legacy_wrapper.cpp  husky_diagnostics.cpp  husky_hardware.cpp
clearpath_common/src/horizon_legacy/: Logger.cpp  Message.cpp  Message_cmd.cpp  Message_data.cpp  Message_request.cpp  Number.cpp  Transport.cpp  crc.cpp  linux_serial.cpp
clearpath_control/: package.xml
clearpath_control/config/: imu_filter.yaml  public_interface.yaml  twist_mux.yaml
clearpath_control/config/a200/: control.yaml  localization.yaml  teleop_interactive_markers.yaml  teleop_logitech.yaml  teleop_ps4.yaml
clearpath_control/launch/: control.launch.py  localization.launch.py  teleop_base.launch.py  teleop_joy.launch.py
clearpath_desktop/: CMakeLists.txt  package.xml
clearpath_manipulators/launch/: control.launch.py  manipulators.launch.py  moveit.launch.py
clearpath_manipulators_description/launch/: description.launch.py
clearpath_platform_description/: CMakeLists.txt  package.xml
clearpath_platform_description/launch/: description.launch.py
clearpath_platform_description/urdf/: decorations.urdf.xacro  husky.urdf.xacro  husky_macro.urdf.xacro  wheel.urdf.xacro
clearpath_platform_description/urdf/a200/: a200.urdf.xacro
clearpath_platform_description/urdf/a200/attachments/: bumper.urdf.xacro  observer_backpack.urdf.xacro  sensor_arch.urdf.xacro  top_plate.urdf.xacro
clearpath_platform_description/urdf/a200/wheels/: wheel.urdf.xacro
clearpath_platform_description/urdf/accessories/: sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro
clearpath_viz/: package.xml
clearpath_viz/launch/: view_diagnostics.launch.py  view_model.launch.py  view_moveit.launch.py  view_navigation.launch.py  view_robot.launch.py
clearpath_viz/rviz/: model.rviz  robot.rviz
husky_bringup/: package.xml
husky_bringup/launch/: accessories.launch.py
husky_bringup/scripts/: install
husky_gazebo/: CHANGELOG.rst  package.xml
husky_gazebo/launch/: gazebo.launch.py  spawn_husky.launch
husky_robot/: package.xml
